# nix-survey-analysis

./: .gitignore  README.md  analysis.py  pyproject.toml  requirements.txt
configs/: 2023.yml
docs/announces/: 2023-results.md
etc/: gender by region.ipynb
nixos/survey_analysis/: answers.py  config.py  plot.py  questions.py
scripts/: analysis.py  questions.py
